# RePairCompression

./: CMakeLists.txt  LICENSE  README.md
benchmarking/: benchmark_100M_same.cpp  benchmark_10M_same.cpp
scripts/: CompressFile.cpp  DecompressFile.cpp
src/: CommonDefinitions.hpp  Entry.hpp  EntryPair.cpp  EntryPair.hpp  HashTable.cpp  HashTable.hpp  LPRecordHTable.cpp  LPRecordHTable.hpp  PriorityQueue.cpp  PriorityQueue.hpp  RePairCompression.cpp  RePairCompression.hpp  RePairDataStructure.hpp  RePairDataStructureConcrete.cpp  RePairDataStructureConcrete.hpp  Record.hpp  RepairCoder.cpp  RepairCoder.hpp  Serialization.cpp  Serialization.hpp  TranslateTable.cpp  TranslateTable.hpp  ValuePair.cpp  ValuePair.hpp
test/: LPRecordHTableTest.cpp  RepairCompressionUsabilityTest.cpp
